compiler/test-data/parser/blueprint/errors/unclosed_brace.frel
module blueprint.errors.unclosed_brace

blueprint Hello {
    text { "Hello" }
